Enhance README with complete project documentation
Added comprehensive documentation for the UHF RFID System project, including project overview, system architecture, technology stack, API documentation, installation instructions, and contribution guidelines.